--- a/src/app/components/section-header/section-header.component.html
+++ b/src/app/components/section-header/section-header.component.html
@@ -1,6 +1,6 @@
 <div class="header">
-  <h2 class="title" wmAnimate="fadeIn" aos>{{ title }}</h2>
-  <div class="title-blurb" wmAnimate="fadeInDown" aos delay="250ms">
+  <h2 class="title">{{ title }}</h2>
+  <div class="title-blurb">
     {{ titleBlurb }}
   </div>
   <div class="clear-fix"></div>
