Update color scheme

--- a/src/styles/base/_colors.scss
+++ b/src/styles/base/_colors.scss
@@ -1,11 +1,20 @@
 :root {
-  --primary: rgb(103, 58, 183);
-  --secondary: rgb(255, 215, 64);
+  --primary: rgb(34, 179, 235);
+  --secondary: rgb(85, 197, 240);
   --white: rgb(255, 255, 255);
   --black: rgb(0, 0, 0);
   --off-black: #333;
   --gray: #3d3d3d;
 }
+
+// :root {
+//   --primary: rgb(103, 58, 183);
+//   --secondary: rgb(255, 215, 64);
+//   --white: rgb(255, 255, 255);
+//   --black: rgb(0, 0, 0);
+//   --off-black: #333;
+//   --gray: #3d3d3d;
+// }
 
 // :root {
 //   --primary: rgb(11, 198, 227);
