--- a/src/styles/palettes/_resume-mat-palette.scss
+++ b/src/styles/palettes/_resume-mat-palette.scss
@@ -1,65 +1,65 @@
-// $mat-resume-primary: (
-//   50: #e2f8fc,
-//   100: #b6eef7,
-//   200: #85e3f1,
-//   300: #54d7eb,
-//   400: #30cfe7,
-//   500: #0bc6e3,
-//   600: #0ac0e0,
-//   700: #08b9dc,
-//   800: #06b1d8,
-//   900: #03a4d0,
-//   A100: #f8fdff,
-//   A200: #c5f1ff,
-//   A400: #92e5ff,
-//   A700: #79deff,
-//   contrast: (
-//     50: $dark-primary-text,
-//     100: $dark-primary-text,
-//     200: $dark-primary-text,
-//     300: $light-primary-text,
-//     400: $light-primary-text,
-//     500: $light-primary-text,
-//     600: $light-primary-text,
-//     700: $light-primary-text,
-//     800: $light-primary-text,
-//     900: $light-primary-text,
-//     A100: $dark-primary-text,
-//     A200: $light-primary-text,
-//     A400: $light-primary-text,
-//     A700: $light-primary-text,
-//   ),
-// );
+$mat-resume-primary: (
+  50: #e4f6fd,
+  100: #bde8f9,
+  200: #91d9f5,
+  300: #64caf1,
+  400: #43beee,
+  500: #22b3eb,
+  600: #1eace9,
+  700: #19a3e5,
+  800: #149ae2,
+  900: #0c8bdd,
+  A100: #ffffff,
+  A200: #d4edff,
+  A400: #a1d7ff,
+  A700: #88ccff,
+  contrast: (
+    50: $dark-primary-text,
+    100: $dark-primary-text,
+    200: $dark-primary-text,
+    300: $light-primary-text,
+    400: $light-primary-text,
+    500: $light-primary-text,
+    600: $light-primary-text,
+    700: $light-primary-text,
+    800: $light-primary-text,
+    900: $light-primary-text,
+    A100: $dark-primary-text,
+    A200: $light-primary-text,
+    A400: $light-primary-text,
+    A700: $light-primary-text,
+  ),
+);
 
-// $mat-resume-secondary: (
-//   50: #f9f5eb,
-//   100: #f1e5ce,
-//   200: #e8d4ae,
-//   300: #dec28d,
-//   400: #d7b574,
-//   500: #d0a85c,
-//   600: #cba054,
-//   700: #c4974a,
-//   800: #be8d41,
-//   900: #b37d30,
-//   A100: #fffcf8,
-//   A200: #ffe6c5,
-//   A400: #ffd092,
-//   A700: #ffc579,
-//   contrast: (
-//     50: $dark-primary-text,
-//     100: $dark-primary-text,
-//     200: $dark-primary-text,
-//     300: $light-primary-text,
-//     400: $light-primary-text,
-//     500: $light-primary-text,
-//     600: $light-primary-text,
-//     700: $light-primary-text,
-//     800: $light-primary-text,
-//     900: $light-primary-text,
-//     A100: $dark-primary-text,
-//     A200: $light-primary-text,
-//     A400: $light-primary-text,
-//     A700: $light-primary-text,
-//   ),
-// );
+$mat-resume-secondary: (
+  50: #ebf8fd,
+  100: #cceefb,
+  200: #aae2f8,
+  300: #88d6f5,
+  400: #6fcef2,
+  500: #55c5f0,
+  600: #4ebfee,
+  700: #44b8ec,
+  800: #3bb0e9,
+  900: #2aa3e5,
+  A100: #ffffff,
+  A200: #f1faff,
+  A400: #bee7ff,
+  A700: #a4ddff,
+  contrast: (
+    50: $dark-primary-text,
+    100: $dark-primary-text,
+    200: $dark-primary-text,
+    300: $light-primary-text,
+    400: $light-primary-text,
+    500: $light-primary-text,
+    600: $light-primary-text,
+    700: $light-primary-text,
+    800: $light-primary-text,
+    900: $light-primary-text,
+    A100: $dark-primary-text,
+    A200: $light-primary-text,
+    A400: $light-primary-text,
+    A700: $light-primary-text,
+  ),
+);
