Rename classes and remove commented code

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -103,11 +103,11 @@
 
 <div class="container">
   <section id="header" class="header" spyTarget="header">
-    <h1 class="side-title" wmAnimate="fadeInDown" aos>
+    <h1 class="side-accent" wmAnimate="fadeInDown" aos>
       <a href="#">Matt Blum</a>
     </h1>
-    <h1 class="side-title" wmAnimate="fadeInDown" aos delay="250ms">
-      <span><span class="top-line">&nbsp;</span>Front-End Developer</span>
+    <h1 class="side-accent" wmAnimate="fadeInDown" aos delay="250ms">
+      <span><span class="top-accent">&nbsp;</span>Front-End Developer</span>
     </h1>
   </section>
   <!-- #header -->
