--- a/src/styles/base/_colors.scss
+++ b/src/styles/base/_colors.scss
@@ -3,7 +3,7 @@
   --secondary: rgb(85, 197, 240);
   --white: rgb(255, 255, 255);
   --black: rgb(0, 0, 0);
-  --off-black: #333;
+  --dark-gray: #333;
   --gray: #3d3d3d;
 }
 
@@ -12,7 +12,7 @@
 //   --secondary: rgb(255, 215, 64);
 //   --white: rgb(255, 255, 255);
 //   --black: rgb(0, 0, 0);
-//   --off-black: #333;
+//   --dark-gray: #333;
 //   --gray: #3d3d3d;
 // }
 
@@ -21,6 +21,6 @@
 //   --secondary: rgb(208, 168, 92);
 //   --white: rgb(255, 255, 255);
 //   --black: rgb(0, 0, 0);
-//   --off-black: #333;
+//   --dark-gray: #333;
 //   --gray: #3d3d3d;
 // }
