--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,16 +1,28 @@
-nav.mobile {
-  display: block;
-}
+$nav-mobile-height: 48px;
+
+// nav.mobile {
+//   background-color: var(--primary);
+//   color: var(--white);
+//   display: flex;
+//   height: $nav-mobile-height;
+//   justify-content: flex-end;
+//   position: fixed;
+//   right: 0;
+//   top: 0;
+//   width: 100%;
+//   z-index: 1;
+// }
+
+// .mobile-nav {
+//   position: fixed;
+// }
 
 nav.desktop {
   display: none;
 }
 
 .landing {
-  background: linear-gradient(
-      rgba(34, 179, 235, 0.25),
-      rgba(85, 197, 240, 0.25)
-    ),
+  background: linear-gradient(rgba(34, 179, 235, 0.1), rgba(85, 197, 240, 0.1)),
     url("../assets/images/cover/subtle.webp");
 
   align-items: center;
@@ -90,6 +102,7 @@ nav.desktop {
     position: absolute;
     transition: background-color 0.3s;
     width: 100%;
+    z-index: 10;
 
     &:hover {
       background-color: var(--black);
