--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -5,7 +5,7 @@
 @import "./base/lib";
 @import "./components/mat-buttons";
 @import "./components/mat-cards";
-// @import "./components/mat-drawer-container";
+@import "./components/mat-menu";
 @import "./themes/resume-mat-theme";
 
 html,
