--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -315,13 +315,92 @@
   </section>
   <!-- #projects -->
 
-  <section id="career" spyTarget="career" wmAnimate="fadeInDown" aos>
+  <section
+    id="career"
+    class="career"
+    spyTarget="career"
+    wmAnimate="fadeInDown"
+    aos
+  >
     <mat-card>
       <app-section-header
         [title]="'Career'"
         [titleBlurb]="'Experience'"
       ></app-section-header>
-      <div class="content">Content</div>
+      <div class="content">
+        <div class="sub-section">
+          <div class="career-header">
+            <span
+              ><h2>Select Sires</h2>
+              <span>Remote</span>
+            </span>
+            <span>June 2017 to August 2020</span>
+          </div>
+          <!-- career-header -->
+          <h3>Front-end Developer</h3>
+          <div>
+            Front-end Developer where I created and maintained various Angular
+            applications using TypeScript, JS, ES6, NgRx, Redux, Material
+            Design, PrimeNG, etc. These applications assist geneticists in
+            making breeding decisions, which improve farmers' cattle genetics.
+          </div>
+        </div>
+        <!-- .sub-section -->
+        <div class="sub-section">
+          <div class="career-header">
+            <span
+              ><h2>Accelerated Genetics</h2>
+              <span>Remote</span>
+            </span>
+            <span>January 2015 to May 2017</span>
+          </div>
+          <!-- career-header -->
+          <h3>Full-Stack Web Developer</h3>
+          <div>
+            <ul>
+              <li>
+                Incumbent with creating, managing and maintaining IIS websites,
+                web-applications, and web services for, but not limited to,
+                <a href="https://www.accelgen.com" target="_blank"
+                  >www.accelgen.com</a
+                >
+              </li>
+              <li>
+                Leverage CMS employing various skills such as ASP.NET Web Forms,
+                C#, SQL, JavaScript/jQuery, Bootstrap, and SCSS/CSS
+              </li>
+              <li>
+                Maintain and optimize SQL Server databases to create, maintain,
+                and execute data upload scripts to handle weekly, monthly, and
+                triannual data uploads
+              </li>
+              <li>
+                Develop tools for systems and employees to generate automated
+                reporting
+              </li>
+              <li>
+                Front end development – employed bootstrap and JavaScript to
+                create a clear, impactful presentation
+              </li>
+              <li>
+                Responsible for back end development, website optimization and
+                security
+              </li>
+              <li>
+                Employed project management skills to manage specific
+                priorities, set deadlines, and adhere to budget constraints
+              </li>
+              <li>
+                Successfully developed and launched the ecommerce portal:
+                <a href="https://shop.accelgen.com" target="_blank"
+                  >shop.accelgen.com</a
+                >
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- .sub-section -->
+      </div>
       <!-- .content -->
     </mat-card>
   </section>
